--- a/WebApplication1/Views/Shoppingcart/Index.cshtml
+++ b/WebApplication1/Views/Shoppingcart/Index.cshtml
@@ -12,10 +12,10 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div class="breadcrumb__text">
-                    <h2>Shopping Cart</h2>
+                    <h2>Giỏ hàng</h2>
                     <div class="breadcrumb__option">
-                        <a href="../index.html">Home</a>
-                        <span>Shopping Cart</span>
+                        <a href="../index.html">Trang chủ</a>
+                        <span>Giỏ hảng</span>
                     </div>
                 </div>
             </div>
@@ -89,10 +89,10 @@
                             {
                                 <thead>
                                     <tr>
-                                        <th class="shoping__product">Products</th>
-                                        <th>Price</th>
-                                        <th>Quantity</th>
-                                        <th>Total</th>
+                                        <th class="shoping__product">Sản phẩm</th>
+                                        <th>Giá</th>
+                                        <th>Số lượng</th>
+                                        <th>Tổng tiền</th>
                                         <th></th>
                                     </tr>
                                 </thead>
@@ -133,20 +133,20 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="shoping__cart__btns">
-                        <a asp-controller="Home" asp-action="Index" class="primary-btn cart-btn">CONTINUE SHOPPING</a>
+                        <a asp-controller="Home" asp-action="Index" class="primary-btn cart-btn">TIẾP TỤC MUA HÀNG</a>
                         <a href="#" class="primary-btn cart-btn cart-btn-right">
                             <span class="icon_loading"></span>
-                            Upadate Cart
+                           Cập nhật giỏ hàng
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="shoping__continue">
                         <div class="shoping__discount">
-                            <h5>Discount Codes</h5>
+                            <h5>Mã giảm giá</h5>
                             <form action="#">
-                                <input type="text" placeholder="Enter your coupon code">
-                                <button type="submit" class="site-btn">APPLY COUPON</button>
+                                <input type="text" placeholder="Nhập mã giảm giá của bạn">
+                                <button type="submit" class="site-btn">Áp dụng mã giảm giá</button>
                             </form>
                         </div>
                     </div>
@@ -155,12 +155,12 @@
                 {
                     <div class="col-lg-6">
                         <div class="shoping__checkout">
-                            <h5>Cart Total</h5>
+                            <h5>Tổng tiền</h5>
                             <ul>
-                                <li class="subtotal-cart">Subtotal <span>@cart.Total</span></li>
-                                <li class="total-cart">Total <span>@cart.Total</span></li>
+                                <li class="subtotal-cart">Tổng phụ <span>@cart.Total</span></li>
+                                <li class="total-cart">Tổng tiền thanh toán <span>@cart.Total</span></li>
                             </ul>
-                            <a asp-controller="CheckOut" asp-action="Index" class="primary-btn">PROCEED TO CHECKOUT</a>
+                            <a asp-controller="CheckOut" asp-action="Index" class="primary-btn">Tiến hành thanh toán</a>
                         </div>
                     </div>
                 }
