chỉnh sửa thành tiếng Việt. Sửa lỗi không thanh toán được: Chỉnh sửa tại dòng 45 của file CheckOutController.cs

--- a/WebApplication1/Views/ProductDetail/Detail.cshtml
+++ b/WebApplication1/Views/ProductDetail/Detail.cshtml
@@ -29,7 +29,7 @@
                 <div class="breadcrumb__text">
                     <h2>@Model.Tensp</h2>
                     <div class="breadcrumb__option">
-                        <a href="../index.html">Home</a>
+                        <a href="../index.html">Trang chủ</a>
                         <span>@Model.Tensp</span>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                     <a href="#" class="primary-btn btn-add-to-cart" data-id="@Model.Masp">ADD TO CARD</a>
                     <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
                     <ul>
-                        <li><b>Availability</b> <span>In Stock</span></li>
+                        <li><b>Sẵn có</b> <span>trong kho</span></li>
                         <li><b>Shipping</b> <span>01 day shipping. <samp>Free pickup today</samp></span></li>
                         <li><b>Weight</b> <span>0.5 kg</span></li>
                         <li>
