--- a/WebApplication1/Views/DangKy/DangKy.cshtml
+++ b/WebApplication1/Views/DangKy/DangKy.cshtml
@@ -80,7 +80,7 @@
                 <button type="submit" class="btn btn-info btn-block"> Tạo tài khoản </button> <br>
                 <br>
                 <div class="d-flex justify-content-center links">
-                    Have an account?<a href="../DangNhap"> Đăng nhập</a>
+                    Đã có tài khoản?<a href="../DangNhap"> Đăng nhập</a>
                 </div>
             </form>
             <img src="../img/image-2.png" alt="" class="image-2">
