--- a/WebApplication1/Views/DangNhap/Index.cshtml
+++ b/WebApplication1/Views/DangNhap/Index.cshtml
@@ -28,7 +28,7 @@
         <div class="d-flex justify-content-center h-100">
             <div class="card">
                 <div class="card-header">
-                    <h3>Sign In</h3>
+                    <h3>Đăng nhập</h3>
                     <div class="d-flex justify-content-end social_icon">
                         <span><i class="fab fa-facebook-square"></i></span>
                         <span><i class="fab fa-google-plus-square"></i></span>
@@ -51,7 +51,7 @@
                             <input type="password" class="form-control" id="Password" placeholder="Mật khẩu" name="Password" required>
                         </div>
                         <div class="row align-items-center remember">
-                            <input type="checkbox">Remember Me
+                            <input type="checkbox">Nhớ mật khẩu
                         </div>
                         <div class="form-group">
                             <input type="submit" value="Login" class="btn float-right login_btn">
@@ -62,10 +62,10 @@
 
                 <div class="card-footer">
                     <div class="d-flex justify-content-center links">
-                        Don't have an account?<a asp-action="DangKy" asp-controller="DangKy">Sign Up</a>
+                        Bạn chưa có tài khoản?<a asp-action="DangKy" asp-controller="DangKy">Đăng ký</a>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <a href="#">Forgot your password?</a>
+                        <a href="#">Quên mật khẩu?</a>
                     </div>
                 </div>
             </div>
