--- a/WebApplication1/Views/_ViewStart.cshtml
+++ b/WebApplication1/Views/_ViewStart.cshtml
@@ -6,6 +6,9 @@
         case "Admin":
             Layout = "~/Views/Shared/_AdminLayout.cshtml";
             break;
+        case "KhachHang":
+            Layout = "~/Views/Shared/_UserLayout.cshtml";
+            break;
         default:
             Layout = "~/Views/Shared/_Layout.cshtml";
             break;
