--- a/WebApplication1/Views/Admin/OrderDetail.cshtml
+++ b/WebApplication1/Views/Admin/OrderDetail.cshtml
@@ -177,7 +177,9 @@
                             <span>Tình trạng: </span><br>
                             <select name="tt" class="form-control">
                                 <option value="1">Đã hoàn thành</option>
-                                <option value="0">Chưa hoàn thành</option>
+                                <option value="0">Đang xử lý</option>
+                                <option value="2">Đang chuẩn bị</option>
+                                <option value="3">Đang giao hàng</option>
                             </select><br />
                         </div>
                     </div>
