--- a/WebApplication1/Views/Admin/ProductManager.cshtml
+++ b/WebApplication1/Views/Admin/ProductManager.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "ProductManager";
     List<Sanpham> products = ViewData["product"] as List<Sanpham>;
+    List<Loaisanpham> loaisp = ViewData["loaisp"] as List<Loaisanpham>;
 }
 
 <!-- Header-->
@@ -20,7 +21,7 @@
                 <ol class="breadcrumb text-right">
                     <li><a href="../#">Dashboard</a></li>
                     <li><a href="../#">Table</a></li>
-                    <li class="active">Data table</li>
+                    <li class="active">Bảng sản phẩm</li>
                 </ol>
             </div>
         </div>
@@ -34,7 +35,16 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <strong class="card-title">Data Table</strong>
+                        <div class="row">
+                            <strong class="card-title col-md-6">Data Table</strong>
+                            <div class="col-md-6">
+                                <button class="btn btn-outline-success float-right btn-add-product">
+                                    <i class="fa fa-add"></i>
+                                    Thêm sản phẩm
+                                </button>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="card-body">
                         <table id="bootstrap-data-table-export" class="table table-striped table-bordered">
@@ -58,7 +68,10 @@
                                         <td>@p.Gia</td>
                                         <td>
                                             <button class="btn btn-outline-success btn-edit-product" data-id="#ProductModal-@p.Masp">
-                                                <i class="fa fa-edit"></i> Detail
+                                                <i class="fa fa-edit"></i> Chi tiết
+                                            </button>
+                                            <button class="btn btn-outline-danger btn-remove-product" data-id="@p.Masp">
+                                                <i class="fa fa-close"></i> Xóa
                                             </button>
                                         </td>
                                     </tr>
@@ -117,6 +130,58 @@
         </div>
     </div>
 }
+
+<div class="modal fade" id="AddProduct">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            @using (Html.BeginForm("AddProduct", "Admin", FormMethod.Post,
+                     new { enctype = "multipart/form-data" }))
+            {
+                <!-- Modal Header -->
+                <form class="needs-validation" asp-controller="Admin" asp-action="EditProduct" method="post">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Thêm món mới</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <div class="row">
+
+                            <div class="col-md-6">
+                                <label for="file">Hình ảnh:</label>
+                                <input class="form-control-file" type="file" name="files" id="files" style="width: 100%;" />
+                                <span>Tên sản phẩm: </span><br />
+                                <input class="form-control" name="tensp" required>
+                                <span>Giá: </span><br />
+                                <input class="form-control" name="gia" type="number" required><br />
+                            </div>
+                            <div class="col-md-6">
+                                <select name="maloaisp" id="select" class="form-control">
+                                    <option value="0">Please select</option>
+                                    @foreach (var loai in loaisp)
+                                    {
+                                        <option value="@loai.Maloaisp">@loai.Tenloaisp</option>
+                                    }
+                                </select>
+                                <span>Mô tả: </span><br>
+                                <textarea name="mota" id="textarea-input" rows="9" placeholder="Nội dung" class="form-control"></textarea><br />
+                            </div>
+                           
+
+
+                        </div>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer row">
+                        <button type="submit" class="btn btn-success col-sm-3 pl-3">Cập nhật</button>
+                    </div>
+                </form>
+            }
+        </div>
+    </div>
+</div>
 
 
 
