Chỉnh sửa tiếng việt ở một số trang.

--- a/WebApplication1/Views/DangKy/DangKy.cshtml
+++ b/WebApplication1/Views/DangKy/DangKy.cshtml
@@ -33,7 +33,7 @@
         <div class="inner">
             <img src="../img/image-1.png" alt="" class="image-1">
             <form class="row" method="POST" asp-action="DangKy" asp-controller="DangKy">
-                <h3>New Account?</h3>
+                <h3>Tài khoản mới</h3>
                 <div class="form-holder col-md-6">
                     <span class="lnr lnr-user"></span>
                     <input type="text" class="form-control pl-4" id="username" placeholder="Tên tài khoản" name="Tentk" autocomplete="off" required>
