--- a/WebApplication1/Views/ProductDetail/Detail.cshtml
+++ b/WebApplication1/Views/ProductDetail/Detail.cshtml
@@ -82,19 +82,19 @@
                             </div>
                         </div>
                     </div>
-                    <a href="#" class="primary-btn btn-add-to-cart" data-id="@Model.Masp">ADD TO CARD</a>
+                    <a href="#" class="primary-btn btn-add-to-cart" data-id="@Model.Masp">THÊM VÀO GIỎ HÀNG</a>
                     <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
                     <ul>
-                        <li><b>Sẵn có</b> <span>trong kho</span></li>
-                        <li><b>Shipping</b> <span>01 day shipping. <samp>Free pickup today</samp></span></li>
-                        <li><b>Weight</b> <span>0.5 kg</span></li>
+                        <li><b>Sẵn có</b> <span>Trong kho</span></li>
+                        <li><b>Giao hàng</b> <span>Giao hàng miễn phí trong 2h@*<samp>Miễn phí chọn</samp>*@</span></li>
+                        <li><b>Thể tích</b> <span>500 ml</span></li>
                         <li>
-                            <b>Share on</b>
+                            <b>Chia sẻ</b>
                             <div class="share">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                                <a href="#"><i class="fa fa-pinterest"></i></a>
+                                <a href="https://www.facebook.com/Feel-Coffee-107749674341307/?modal=admin_todo_tour" target="_blank"><i class="fa fa-facebook"></i></a>
+                                <a href="https://twitter.com/explore" target="_blank"><i class="fa fa-twitter"></i></a>
+                                <a href="https://fr.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p"></i></a>
                             </div>
                         </li>
                     </ul>
