--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -256,8 +256,8 @@
                 </div>
                 <div class="col-lg-4 col-md-12">
                     <div class="footer__widget">
-                        <h6>Nhận thêm thông tin chương trình khuyến mãi mới nhất của cửa hàng</h6>
-                        <p>Get E-mail updates about our latest shop and special offers.</p>
+                        <h6>Đăng ký nhận tin</h6>
+                        <p>Đừng bỏ lỡ hàng ngàn ưu đãi đặc biệt</p>
                         <form action="#">
                             <input type="text" placeholder="Nhập email của bạn">
                             <button type="submit" class="site-btn">Đăng ký</button>
